Fix chat list item message overflowing

--- a/src/components/sidebar_components/ChatListItem.css
+++ b/src/components/sidebar_components/ChatListItem.css
@@ -22,9 +22,11 @@
   background-color: white;
   margin-left: 1em;
   border-radius: 50%;
-  min-width: 110px; /* This prevents picture from shrinking on screen resizing*/
+  min-width: 110px;
+  /* This prevents picture from shrinking on screen resizing*/
   /* This line is needed in order to prevent image size of image within DIV, in this case square corners, from being seen on top of rounded corners of the parent DIV*/
-  overflow: hidden; /* This line is needed in order to prevent image size of image within DIV, in this case square corners, from being seen on top of rounded corners of the parent DIV*/
+  overflow: hidden;
+  /* This line is needed in order to prevent image size of image within DIV, in this case square corners, from being seen on top of rounded corners of the parent DIV*/
 }
 
 /* Ensure that photo is made to perfectly fit the parent div container  */
@@ -38,18 +40,20 @@
   display: flex;
   flex-direction: column;
   justify-content: flex-start;
-  height: 100%;
   font-family: inherit;
   color: whitesmoke;
   padding-top: 0.2em;
   padding-bottom: 0.2em;
   padding-left: 1em;
   padding-right: 1em;
-  overflow: hidden;
+  width: 210px;
 }
 
 .chat-list-item-conversation p {
   font-size: medium;
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
 }
 
 .chat-list-item-container i {
